@startuml

title __SERVICE's Class Diagram__\n

  namespace com.reservation_system {
    namespace service {
      class com.reservation_system.service.ReservationService {
          + ReservationService()
          + create()
          + delete()
          + findAll()
          + get()
          + update()
      }
    }
  }
  

  namespace com.reservation_system {
    namespace service {
      class com.reservation_system.service.UserDetailsServiceImpl {
          + UserDetailsServiceImpl()
          + loadUserByUsername()
      }
    }
  }
  

  namespace com.reservation_system {
    namespace service {
      class com.reservation_system.service.UserService {
          + UserService()
          + create()
          + delete()
          + findAll()
          + get()
          + getUserByUsername()
          + update()
      }
    }
  }
  

  com.reservation_system.service.ReservationService o-- com.reservation_system.repos.ReservationRepository : reservationRepository
  com.reservation_system.service.ReservationService o-- com.reservation_system.repos.UserRepository : userRepository
  com.reservation_system.service.UserDetailsServiceImpl .up.|> org.springframework.security.core.userdetails.UserDetailsService
  com.reservation_system.service.UserDetailsServiceImpl o-- com.reservation_system.repos.UserRepository : userRepository
  com.reservation_system.service.UserService o-- com.reservation_system.repos.UserRepository : userRepository


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
